disabling shell buttons on safari and fixing editor length issue

--- a/cmd/play-server/static/styles/site.css
+++ b/cmd/play-server/static/styles/site.css
@@ -473,7 +473,6 @@ body > header > div > div> h1 > a {
   display: block;
   visibility: hidden;
   position: absolute;
-  right: 0;
   top: 28px;
   background-color: #f9f9f9;
   min-width: 159px;
